[gd_scene load_steps=4 format=3 uid="uid://4lynrn5adlcp"]

[ext_resource type="Script" path="res://Scenes/Units/core_console.gd" id="1_dgk1h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0fldd"]
radius = 64.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_x6nhi"]
size = Vector2(64, 64)

[node name="Core Console" type="Node2D"]
script = ExtResource("1_dgk1h")
interaction_label_text = "Press E to Increase Core Activation"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_0fldd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_x6nhi")

[node name="InteractionLabel" type="Label" parent="."]
offset_left = -17.0
offset_top = -147.0
offset_right = 23.0
offset_bottom = -78.0
theme_override_font_sizes/font_size = 50
text = "E"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
